test(security): Story 2.1 T4-T7 — fail-closed test battery + AC8 ratification
T4: 8 forged-JWT JWKS-claim deny tests (RopcSliceUnitTest: sig/iss/aud/exp-null/expired/
nbf + no-kid/malformed) + new RopcSliceFailClosedTest (7 always-on in-process-IdP tests:
4xx/5xx mapNon200, introspection active:false/non-200, password zeroize-on-completion,
saturation fail-closed + saturation-zeroize, maxInflight<1 admission fail-fast). Scripted
RED-on-neuter mutation pass: 13 load-bearing guards bite; fixed a saturation-test
exception-safety hang the pass exposed (holdPermit.countDown() moved into finally).

T5: NoRolledCryptoArchitectureTest -> 4 ArchUnit rules (forbid javax.crypto/MessageDigest/
sun.security + third-party HTTP/JWT stacks; positive RopcSlice -> java.net.http + Nimbus).

T6: ARCHITECTURE-SPINE AD-12 Ratification (AC8) — port immutable henceforth; all four
AD-12 paths expressible (incl. ROPC+mTLS), no contract revision. ROPC register updated.

T7: clean build :buildSrc:test green; 27 security tests, 0 @Disabled; live Keycloak 26.7.0
all four paths green. Independent adversarial audit (gap-finder + AC-mapper) confirmed every
guard bites + every AC satisfied; surfaced+fixed the maxInflight gap; documented two scope
residues (token char[] zeroize = Epic 3; saturation-path cancel = callTimeout-bounded,
mechanism covered by T3's cancelHttp test).

Story 2.1 status: in-progress -> review. (AC2 path4 / AC5 / AC6 / AC7 / AC8 / AC9)

Co-Authored-By: Claude <noreply@anthropic.com>